--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="pictures/Favicon-sign-black.png" type="png">
+    <link rel="shortcut icon" href="Favicon-sign-black.png" type="png">
     <title>New Tab</title>
 </head>
 <body class="body">
@@ -14,10 +14,10 @@
     <div class="container">
 
         <div class="settings" title="Personalize new tab">
-            <img src="pictures/settings.svg" alt="favicon settings">
+            <img src="settings.svg" alt="favicon settings">
         </div>
         <div class="title-page">
-            <img src="pictures/Favicon-sign-black.png" alt="Favicon Image">
+            <img src="Favicon-sign-black.png" alt="Favicon Image">
             <div class="title">Favicon</div>
         </div>
 
@@ -25,11 +25,11 @@
         <!-- For Google Page -->
         <div class="google-search-pane" title="Search the page">
             <div class="search">
-            <img src="pictures/google.ico" alt="google" class="goin">
+            <img src="google.ico" alt="google" class="goin">
             <input type="text" placeholder="Search With Google" id="search-google" data-110n-args="engine":"Google">
             <div class="serah-buttons">
-            <img src="pictures/search.svg" alt="search" class="serahGoogle" onclick="searchitGoogle()">
-            <a href="" id="searchmeGoogle"><img src="pictures/green-search.svg" alt="search" class="serah2Google" onclick="searchitGoogle()"></a>
+            <img src="search.svg" alt="search" class="serahGoogle" onclick="searchitGoogle()">
+            <a href="" id="searchmeGoogle"><img src="green-search.svg" alt="search" class="serah2Google" onclick="searchitGoogle()"></a>
             </div>
         </div>
     </div>
@@ -37,11 +37,11 @@
     <!-- For Bing Page -->
     <div class="bing-search-pane" title="Search the page">
         <div class="search">
-        <img src="pictures/bing.ico" alt="google" class="goin">
+        <img src="bing.ico" alt="google" class="goin">
         <input type="text" placeholder="Search With Bing" id="search-bing" data-110n-args="engine":"Bing">
         <div class="serah2-buttons">
-        <img src="pictures/search.svg" alt="search" class="serahBing" onclick="searchitBing()">
-        <a href="" id="searchmebing"><img src="pictures/green-search.svg" alt="search" class="serah2Bing" onclick="searchitBing()"></a>
+        <img src="search.svg" alt="search" class="serahBing" onclick="searchitBing()">
+        <a href="" id="searchmebing"><img src="green-search.svg" alt="search" class="serah2Bing" onclick="searchitBing()"></a>
         </div>
     </div>
 </div>
@@ -49,11 +49,11 @@
 <!-- For DuckduckGo Page -->
 <div class="DuckduckGo-search-pane" title="Search the page">
     <div class="search">
-    <img src="pictures/duckDuckGo.ico" alt="DuckduckGo" class="goin">
+    <img src="duckDuckGo.ico" alt="DuckduckGo" class="goin">
     <input type="text" placeholder="Search With DuckduckGo" id="search-DuckduckGo" data-110n-args="engine":"DuckduckGo">
     <div class="serah3-buttons">
-    <img src="pictures/search.svg" alt="search" class="serahDuckduckGo" onclick="searchitDuckduckGo()">
-    <a href="" id="searchmeDuckduckGo"><img src="pictures/green-search.svg" alt="search" class="serah2DuckduckGo" onclick="searchitDuckduckGo()"></a>
+    <img src="search.svg" alt="search" class="serahDuckduckGo" onclick="searchitDuckduckGo()">
+    <a href="" id="searchmeDuckduckGo"><img src="green-search.svg" alt="search" class="serah2DuckduckGo" onclick="searchitDuckduckGo()"></a>
     </div>
 </div>
 </div>
@@ -61,11 +61,11 @@
 <!-- For Wikipedia Page -->
 <div class="Wikipedia-search-pane" title="Search the page">
     <div class="search">
-    <img src="pictures/wikipedia.ico" alt="Wikipedia" class="goin">
+    <img src="wikipedia.ico" alt="Wikipedia" class="goin">
     <input type="text" placeholder="Search With Wikipedia" id="search-Wikipedia" data-110n-args="engine":"Wikipedia">
     <div class="serah4-buttons">
-    <img src="pictures/search.svg" alt="search" class="serahWikipedia" onclick="searchitWikipedia()">
-    <a href="" id="searchmeWikipedia"><img src="pictures/green-search.svg" alt="search" class="serah2Wikipedia" onclick="searchitDuckduckGo()"></a>
+    <img src="search.svg" alt="search" class="serahWikipedia" onclick="searchitWikipedia()">
+    <a href="" id="searchmeWikipedia"><img src="green-search.svg" alt="search" class="serah2Wikipedia" onclick="searchitDuckduckGo()"></a>
     </div>
 </div>
 </div>
@@ -73,11 +73,11 @@
 <!-- For Address Page -->
 <div class="Address-search-pane" title="Search the page">
     <div class="search">
-    <img src="pictures/address.svg" alt="Address" class="goin">
+    <img src="address.svg" alt="Address" class="goin">
     <input type="text" placeholder="Enter the Address like 10.0.0.1" id="search-Address" data-110n-args="engine":"Address">
     <div class="serah5-buttons">
-    <img src="pictures/search.svg" alt="search" class="serahAddress" onclick="searchitAddress()">
-    <a href="" id="searchmeAddress"><img src="pictures/green-search.svg" alt="search" class="serah2Address" onclick="searchitAddress()"></a>
+    <img src="search.svg" alt="search" class="serahAddress" onclick="searchitAddress()">
+    <a href="" id="searchmeAddress"><img src="green-search.svg" alt="search" class="serah2Address" onclick="searchitAddress()"></a>
     </div>
 </div>
 </div>
@@ -94,31 +94,31 @@
 
         <div class="search-engine-option">
             <div class="google-pane" id="mrGoogle">
-                <img src="pictures/google.ico" alt="google-fav">
+                <img src="google.ico" alt="google-fav">
                 <div class="title">Google</div>
             </div>
 
 
             <div class="bing-pane" id="mrBing">
-                <img src="pictures/bing.ico" alt="bing-fav">
+                <img src="bing.ico" alt="bing-fav">
                 <div class="title">Bing</div>
             </div>
 
 
             <div class="duckDuckGo-pane" id="mrDuck">
-                <img src="pictures/duckDuckGo.ico" alt="duckDuckGo-fav">
+                <img src="duckDuckGo.ico" alt="duckDuckGo-fav">
                 <div class="title">DuckDuckGo</div>
             </div>
 
 
             <div class="wikipedia-pane" id="mrWiki">
-                <img src="pictures/wikipedia.ico" alt="wikipedia(en)-fav">
+                <img src="wikipedia.ico" alt="wikipedia(en)-fav">
                 <div class="title">Wikipedia(en)</div>
             </div>
 
 
             <div class="address-pane" id="mrAddr">
-                <img src="pictures/address.svg" alt="address-fav">
+                <img src="address.svg" alt="address-fav">
                 <div class="title">Address</div>
             </div>
         </div>
